--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 	.left{background-color:brown; color:white; text-align:center; width:55px;}
 	.right{background-color:purple; color:white; text-align:center; width:55px}
 	label:hover{font-size:25px}
-	input:hover{font-size:25px}	
+	input:hover{font-size:25px}
+	h1:hover{color:red}	
 	</style>
 </head>
 <body>
