--- a/index.html
+++ b/index.html
@@ -94,5 +94,7 @@
 			<input type="submit">	
 	</form>
 	<script src="https://www.cse.ust.hk/~rossiter/dating_web_site.js"></script>
+	<br><br>
+	<a href="part-2.html">Color game</a>
 </body>
 </html>
