--- a/index.html
+++ b/index.html
@@ -96,5 +96,6 @@
 	<script src="https://www.cse.ust.hk/~rossiter/dating_web_site.js"></script>
 	<br><br>
 	<a href="part-2.html">Color game</a>
+	<a href="part-3.html">Kuku</a>
 </body>
 </html>
