--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 	<script src="https://www.cse.ust.hk/~rossiter/dating_web_site.js"></script>
 	<br><br>
 	<a href="part-2.html">Color game</a>
-	<a href="part-3.html">Kuku</a><br>
+	<a href="Introduction-to-HTML5.html">Introduction to HTML5</a><br>
 	<a href="Introduction-to-HTML5.html"><b>Introduction to HTML5</b> by University of Michigan</a>
 </body>
 </html>
