--- a/Introduction-to-HTML5.html.html
+++ b/Introduction-to-HTML5.html.html
@@ -1,4 +1,10 @@
 <!DOCTYPE html>
-<html>
-<p>Kuku 3</p>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Introduction to HTML5 | University of Michigan</title>
+</head>
+<body>
+	
+</body>
 </html>
