--- a/Introduction-to-HTML5.html.html
+++ b/Introduction-to-HTML5.html.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="description" content="My personal draft for Introduction to HTML5 by University of Michigan">
+	<meta name="author" content="Yevgen Farasevych">
 	<title>Introduction to HTML5 | University of Michigan</title>
 </head>
 <body>
