--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -8,6 +8,6 @@
 </head>
 <body>
 	<h1>Introduction to HTML5 by University of Michigan</h1>
-	<a href="http://intro-webdesign.com/html5-plain.html">intro-webdesign <b>html5-plain</b></a>
+	<p>Website without styles loock like this <a href="http://intro-webdesign.com/html5-plain.html">html5-plain</a>
 </body>
 </html>
