--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 	<h1>Introduction to HTML5 by University of Michigan</h1>
-	<p>Website without styles loock like this <a href="http://intro-webdesign.com/html5-plain.html">html5-plain</a>
+	<h2>Week 1</h2>
+	<p>Website without styles loock like <a href="http://intro-webdesign.com/html5-plain.html">this</a>.</p>
 </body>
 </html>
