--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -9,6 +9,7 @@
 <body>
 	<h1>Introduction to HTML5 by University of Michigan</h1>
 	<h2>Week 1</h2>
-	<p>Website without styles loock like <a href="http://intro-webdesign.com/html5-plain.html">this</a>.</p>
+	<p>Website without styles look like <a href="http://intro-webdesign.com/html5-plain.html" alt="without style">this</a>.</p>
+	<p>Textbook: <a href="http://textbooks.opensuny.org/the-missing-link-an-introduction-to-web-development-and-programming/" alt="book">“The Missing Link: An Introduction to Web Development and Programming”</a> by Michael Mendez</p>
 </body>
 </html>
