--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -9,7 +9,19 @@
 <body>
 	<h1>Introduction to HTML5 by University of Michigan</h1>
 	<h2>Week 1</h2>
-	<p>Website without styles look like <a href="http://intro-webdesign.com/html5-plain.html" alt="without style">this</a>.</p>
-	<p>Textbook: <a href="http://textbooks.opensuny.org/the-missing-link-an-introduction-to-web-development-and-programming/" alt="book">“The Missing Link: An Introduction to Web Development and Programming”</a> by Michael Mendez</p>
+		<p>Website without styles look like <a href="http://intro-webdesign.com/html5-plain.html" alt="without style">this</a>.</p>
+		<p>Textbook: <a href="http://textbooks.opensuny.org/the-missing-link-an-introduction-to-web-development-and-programming/" alt="book">“The Missing Link: An Introduction to Web Development and Programming”</a> by Michael Mendez.</p>
+	<h3>Chapter 1</h3>
+	<h2>Brief History of the Internet</h2>
+		<p>As far back as the early stirrings of the Cold War, the concept of a network connecting
+computers was under development by both government and university researchers looking
+for a better means to communicate and share research. The military at the time relied in
+part on microwave transmission technology for communications. An unexpected attack on
+some of these towers demonstrated how susceptible the technology was to failure of even
+small portions of the transmission path. This led the military to seek a method of commu-
+nicating that could withstand attack. At the same time, university researchers were trying
+to share their work between campuses, and were struggling with similar problems when
+their transmissions suffered drops in signal. Parties from both groups ended up at the same
+conference with presentations, and decided to collaborate in order to further their work.</p>
 </body>
 </html>
