--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -11,6 +11,12 @@
 		<div class="container">
 			<h1>Introduction to HTML5 by University of Michigan</h1>
 		</div>
+		
+		<nav>
+			<ul>
+				<li><a href="#week1">Week 1</a></li>
+			</ul>
+		</nav>
 	</header>
 	
 	<!-- week1 end -->
