--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -14,7 +14,7 @@
 		
 		<nav>
 			<ul>
-				<li><a href="#week1">Week 1</a></li>
+				<li><a href="#week1">Week One</a></li>
 			</ul>
 		</nav>
 	</header>
