--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -25,7 +25,7 @@
 		<p>Website without styles look like <a href="http://intro-webdesign.com/html5-plain.html" alt="without style">this</a>.</p>
 		<h4>Textbook: <a href="http://textbooks.opensuny.org/the-missing-link-an-introduction-to-web-development-and-programming/" alt="book">“The Missing Link: An Introduction to Web Development and Programming”</a> by Michael Mendez.</h4>
 		
-		<p><b>Chapter 1. Brief History of the Internet</b></p>
+		<p><b>Chapter 1: Brief History of the Internet</b></p>
 			<p>As far back as the early stirrings of the Cold War, the concept of a network connecting
 			computers was under development by both government and university researchers looking
 			for a better means to communicate and share research. The military at the time relied in
