--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -19,7 +19,11 @@
 		</div>
 	</header>
 	
-	<!-- week1 end -->
+	<!-- section start -->
+	<!-- ================ -->
+	<div>
+		
+	<!-- week1 start -->
 	<div id="week1">
 		<h2>Week 1</h2>
 		<p>Website without styles look like <a href="http://intro-webdesign.com/html5-plain.html" alt="without style">this</a>.</p>
@@ -39,5 +43,8 @@
 			
 	</div>
 	<!-- week1 end -->
+		
+	</div>
+	<!-- section end -->
 </body>
 </html>
