--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -26,6 +26,7 @@
 	<!-- week1 start -->
 	<div id="week1">
 		<h2>Week 1</h2>
+		<h3>Welcome</h3>
 		<p>Website without styles look like <a href="http://intro-webdesign.com/html5-plain.html" alt="without style">this</a>.</p>
 		<h4>Textbook: <a href="http://textbooks.opensuny.org/the-missing-link-an-introduction-to-web-development-and-programming/" alt="book">“The Missing Link: An Introduction to Web Development and Programming”</a> by Michael Mendez.</h4>
 		
