--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -27,8 +27,8 @@
 	<div id="week1">
 		<h2>Week 1</h2>
 		<h3>Welcome</h3>
-		<p>Website without styles look like <a href="http://intro-webdesign.com/html5-plain.html" alt="without style">this</a>.</p>
-		<h4>Textbook: <a href="http://textbooks.opensuny.org/the-missing-link-an-introduction-to-web-development-and-programming/" alt="book">“The Missing Link: An Introduction to Web Development and Programming”</a> by Michael Mendez.</h4>
+		<p>Website without styles look like <a href="http://intro-webdesign.com/html5-plain.html" alt="without style"><b>this</b></a>.</p>
+		<p><b>Textbook: <a href="http://textbooks.opensuny.org/the-missing-link-an-introduction-to-web-development-and-programming/" alt="book">“The Missing Link: An Introduction to Web Development and Programming”</a> by Michael Mendez.</b></p>
 		
 		<p><b>Chapter 1: Brief History of the Internet</b></p>
 			<p>As far back as the early stirrings of the Cold War, the concept of a network connecting
