--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -36,8 +36,8 @@
 			for a better means to communicate and share research. The military at the time relied in
 			part on microwave transmission technology for communications. An unexpected attack on
 			some of these towers demonstrated how susceptible the technology was to failure of even
-			small portions of the transmission path. This led the military to seek a method of commu-
-			nicating that could withstand attack. At the same time, university researchers were trying
+			small portions of the transmission path. This led the military to seek a method of communicating 
+			that could withstand attack. At the same time, university researchers were trying
 			to share their work between campuses, and were struggling with similar problems when
 			their transmissions suffered drops in signal. Parties from both groups ended up at the same
 			conference with presentations, and decided to collaborate in order to further their work.</p>
