--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -41,6 +41,16 @@
 			to share their work between campuses, and were struggling with similar problems when
 			their transmissions suffered drops in signal. Parties from both groups ended up at the same
 			conference with presentations, and decided to collaborate in order to further their work.</p>
+		
+			<p>At the time, computers were far from what we know them as today. A single computer
+			was a large, immobile assortment of equipment that took up an entire room. Data entry was
+			done by using punched cards of paper, or the newest method of the time, magnetic tapes.
+			Interacting with the computer meant reserving time on the equipment and traveling to
+			where it was. Most machines were owned by universities, large corporations, or government
+			organizations due to the staffing demands, size, and cost to acquire and maintain them. The
+			image below depicts the UNIVAC 1, a system used by the United States Census Bureau
+			and other large organizations like universities. One of the fastest machines at the time, it
+			could perform roughly 1000 calculations per second.</p>
 			
 	</div>
 	<!-- week1 end -->
