--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -48,7 +48,7 @@
 			Interacting with the computer meant reserving time on the equipment and traveling to
 			where it was. Most machines were owned by universities, large corporations, or government
 			organizations due to the staffing demands, size, and cost to acquire and maintain them. The
-			image below depicts the UNIVAC 1, a system used by the United States Census Bureau
+			image below depicts the <a href="https://en.wikipedia.org/wiki/UNIVAC_I" alt="Univac 1">UNIVAC 1</a>, a system used by the United States Census Bureau
 			and other large organizations like universities. One of the fastest machines at the time, it
 			could perform roughly 1000 calculations per second.</p>
 			
