--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -51,6 +51,16 @@
 			image below depicts the <a href="https://en.wikipedia.org/wiki/UNIVAC_I" alt="Univac 1">UNIVAC 1</a>, a system used by the United States Census Bureau
 			and other large organizations like universities. One of the fastest machines at the time, it
 			could perform roughly 1000 calculations per second.</p>
+		
+			<p>In comparison, the K computer, a super computer produced in 2012 by the Japanese
+			company Fujitsu, was capable of 10 petaflops per second when it was launched. Before you reach for your dictionary or calculator, we will break that down. FLOPS stands for
+			floating point operations per second, or in basic terms, the number of calculations the
+			system can finish in one second. A petaflop is a numerical indicator of how many 1015 (10
+			with 15 zeroes after it) calculations are completed per second. So, 10 petaflops means the
+			K computer can complete 1015 calculations ten times in one second. If we fed the UNIVAC
+			1 just a single petaflop of data the day it was turned on, it would still be working on the
+			problem today. In fact, it would barely be getting started, just a mere 60+ years into a
+			roughly 317,098-year task!</p>
 			
 	</div>
 	<!-- week1 end -->
