--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -61,6 +61,16 @@
 			1 just a single petaflop of data the day it was turned on, it would still be working on the
 			problem today. In fact, it would barely be getting started, just a mere 60+ years into a
 			roughly 317,098-year task!</p>
+		
+			<p>As cold war tensions grew and Sputnik was launched, the United States Department of
+			Defense (DoD) began to seek additional methods of transmitting information to supple-
+			ment existing methods. They sought something that was decentralized, allowing better
+			resiliency in case of attack, where damage at one point would not necessarily disrupt com-
+			munication. Their network, Arpanet, connected the DoD and participating universities
+			together for the first time. In order to standardize the way networked systems communicated, 
+			the Transfer Control Protocol/Internetwork Protocol (TCP/IP) was created. As
+			various network systems migrated to this standard, they could then communicate with any
+			network using the protocol. <strong>The Internet was born</strong>.</p>
 			
 	</div>
 	<!-- week1 end -->
