--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -70,7 +70,7 @@
 			together for the first time. In order to standardize the way networked systems communicated, 
 			the Transfer Control Protocol/Internetwork Protocol (TCP/IP) was created. As
 			various network systems migrated to this standard, they could then communicate with any
-			network using the protocol. <strong>The Internet was born</strong>.</p>
+			network using the protocol. <b>The <a href="https://en.wikipedia.org/wiki/Internet" alt="Internet history">Internet</a> was born</b>.</p>
 			
 	</div>
 	<!-- week1 end -->
