--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -71,6 +71,11 @@
 			the Transfer Control Protocol/Internetwork Protocol (TCP/IP) was created. As
 			various network systems migrated to this standard, they could then communicate with any
 			network using the protocol. <b>The <a href="https://en.wikipedia.org/wiki/Internet" alt="Internet history">Internet</a> was born</b>.</p>
+		
+			<p>Email was soon to follow, as users of the networks were interested in the timely transmission 
+			and notification of messages. This form of messaging fit one of their initial goals.
+			As time progressed, additional protocols were developed to address particular tasks, like
+			FTP for file transfers and UDP for time-sensitive, error-resistant tasks.</p>
 			
 	</div>
 	<!-- week1 end -->
