--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -12,9 +12,9 @@
 			<h1>Introduction to HTML5 by University of Michigan</h1>
 				
 			<nav>
-				<ul>
+				<ol>
 				<li><a href="#week1">Week One</a></li>
-				</ul>
+				</ol>
 			</nav>
 		</div>
 	</header>
@@ -24,9 +24,9 @@
 	<div>
 		
 	<!-- week1 start -->
-	<div id="week1">
-		<h2>Week 1</h2>
-		<h3>Welcome</h3>
+	<div>
+		<h2 id="week1">Week 1</h2>
+		<h3 id="welcome">Welcome</h3>
 		<p>Website without styles look like <a href="http://intro-webdesign.com/html5-plain.html" alt="without style"><b>this</b></a>.</p>
 		<p><b>Textbook: <a href="http://textbooks.opensuny.org/the-missing-link-an-introduction-to-web-development-and-programming/" alt="book">“The Missing Link: An Introduction to Web Development and Programming”</a> by Michael Mendez.</b></p>
 		
