--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -12,9 +12,13 @@
 			<h1>Introduction to HTML5 by University of Michigan</h1>
 				
 			<nav>
-				<ol>
-				<li><a href="#week1">Week One</a></li>
-				</ol>
+				<ul>
+					<li><a href="#week1">Week One</a>
+						<ul>
+							<li><a href="#welcome">Welcome</a></li>
+						</ul>
+					</li>
+				</ul>
 			</nav>
 		</div>
 	</header>
