--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -80,6 +80,11 @@
 			and notification of messages. This form of messaging fit one of their initial goals.
 			As time progressed, additional protocols were developed to address particular tasks, like
 			FTP for file transfers and UDP for time-sensitive, error-resistant tasks.</p>
+		
+			<p>Ongoing improvements in our ability to move more information, and move it faster,
+			between systems progressed at a rate similar to the calculative power of the computers we
+			saw earlier. This brings us to where we are today; able to watch full-length movies, streamed
+			in high quality right to our phones and computers, even while riding in a car.</p>
 			
 	</div>
 	<!-- week1 end -->
