--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -6,22 +6,25 @@
 	<meta name="author" content="Yevgen Farasevych">
 	<title>Introduction to HTML5 | University of Michigan</title>
 </head>
-<body>
-	<header>
+<body id="body">
+	
+	<div class="header__wrapper">
+	<header id="header">
 		<div class="container">
 			<h1>Introduction to HTML5 by University of Michigan</h1>
 				
 			<nav>
 				<ul>
 					<li><a href="#week1">Week One</a>
-						<ul>
-							<li><a href="#welcome">Welcome</a></li>
-						</ul>
+					<ul>
+						<li><a href="#welcome">Welcome</a></li>
+					</ul>
 					</li>
 				</ul>
 			</nav>
 		</div>
 	</header>
+	</div>
 	
 	<!-- section start -->
 	<!-- ================ -->
