--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -97,6 +97,10 @@
 	
 	
 	<footer id="footer">
+		<div class="footer__inner">
+			<div></div>
+			<div></div>
+		</div>
 	</footer>
 </body>
 </html>
