--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -88,6 +88,20 @@
 			between systems progressed at a rate similar to the calculative power of the computers we
 			saw earlier. This brings us to where we are today; able to watch full-length movies, streamed
 			in high quality right to our phones and computers, even while riding in a car.</p>
+		
+		<p><b>Chapter 4: Network Basics</b></p>
+			<p>An IP (Internet Protocol) address is a unique code that identifies a piece of equipment
+			connected to a network. These addresses are used in messages between network devices like
+			the network or wireless card in your computer, the equipment from your ISP (internet
+			service provider), and all pieces of equipment between your machine and the one your
+			computer needs to talk to.</p>
+		
+			<p>IP Addresses live in the network layer, which is one of seven layers in the protocol suite
+			defined in the OSI Model. The OSI model stands for Open Systems Interconnection, and
+			was created by the International Organization for Standardization, an international non-
+			governmental group of professionals who strive to establish standards and best practices
+			in a variety of fields. The OSI Model for networking breaks the system of transmitting data
+			into the layers show below in an attempt to delineate where certain actions should take place.</p>
 			
 	</div>
 	<!-- week1 end -->
