--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -105,6 +105,13 @@
 			governmental group of professionals who strive to establish standards and best practices
 			in a variety of fields. The OSI Model for networking breaks the system of transmitting data
 			into the layers show below in an attempt to delineate where certain actions should take place.</p>
+		
+			<p>The seven layers depicted above make up the OSI body’s recommended protocol suite.
+			In the diagram, transmission of data crosses two routers and over the Internet to reach its
+			destination. By following the data along the arrows, we see it pass through various layers of
+			communication and processing as it crosses the internal network, through the first router,
+			across the public network (internet connection), into the recipient’s router, and then is
+			reassembled into its original form.</p>
 			
 	</div>
 	<!-- week1 end -->
