--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -93,7 +93,7 @@
 			in high quality right to our phones and computers, even while riding in a car.</p>
 		
 		<p><b>Chapter 4: Network Basics</b></p>
-			<p>An IP (Internet Protocol) address is a unique code that identifies a piece of equipment
+			<p><b>IP Addresses</b><br>An IP (Internet Protocol) address is a unique code that identifies a piece of equipment
 			connected to a network. These addresses are used in messages between network devices like
 			the network or wireless card in your computer, the equipment from your ISP (internet
 			service provider), and all pieces of equipment between your machine and the one your
