--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -154,7 +154,7 @@ additional information that describes how many other pieces there are, what prot
 being used, where the packet came from and is headed to, along with some other related
 information.</p>
 		
-			<p><b>URL</b>Seeing as most of us would have a hard time remembering what IP address is needed to
+			<p><b>URL</b><br>Seeing as most of us would have a hard time remembering what IP address is needed to
 			get to, say, Facebook (173.252.100.16) or the Weather Channel (96.8.80.132) we instead
 			use URLs, universal resource locators. This allows us to use www.facebook.com and www.
 			weather.com to get to where we want to go without referring to a long list of IP addresses.
@@ -169,7 +169,7 @@ information.</p>
 			like www.facebook.com, and the resource id, or URI, is everything after that,
 			which points to the particular file we want to see.</p>
 		
-			<p><b>Ports</b>
+			<p><b>Ports</b><br>
 While an IP address and a URL will bring you to a particular web server, there may be
 more than one way you want to interact with it, or more than one thing you want it to do.
 Maybe you also want the server to provide email services, or you want to use FTP to update
@@ -182,7 +182,7 @@ in most cases as firewalls and other security devices may require additional con
 keep them from blocking wanted traffic because it is arriving at an unusual, fire walled, or
 “locked” port.</p>
 		
-			<p><b>Hosting Facilities</b>
+			<p><b>Hosting Facilities</b><br>
 If you are using a server that is not under your physical care, and is managed by an off-
 site third party, then you likely have an agreement with a hosting facility. Hosting facilities
 are typically for-profit companies that manage the physical equipment necessary to provide
