--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -199,6 +199,8 @@ their clients have the best up time as possible. Ads like the one below are comm
 services and often emphasize their best features. Price competition makes for relatively
 affordable hosting for those who are not looking for dedicated servers and are comfortable
 with sharing their (virtual) server resources with other customers.</p>
+		
+			<p><b>Chapter 7: Markup Languages</b></p>	
 			
 	</div>
 	<!-- week1 end -->
