--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -202,6 +202,22 @@ with sharing their (virtual) server resources with other customers.</p>
 		
 			<p><b>Chapter 7: Markup Languages</b></p>	
 			
+			<p>Document markup is a notation method that defines how particular pieces of information
+are meant to be formatted. The term comes from the practice of marking up manuscripts to
+notate changes that need to be made. Markup in terms of programming languages is used
+to identify a language that specifies how a document is to appear.</p>
+		
+			<p>If you have ever used multiple colors of ink or highlighter when making notes and
+ascribed meaning to those colors for yourself (e.g., yellow highlighter is important, red
+ink is a definition) then you have already practiced document markup. You are providing
+additional layers of information along with the written text, in this case visual cues as to the
+purpose of the written information.</p>
+		
+			<p>Some popular markup languages are hypertext markup language (HTML), extensible
+markup language (XML) and extensible hypertext markup language (XHTML).These
+were each created to fulfill particular needs in defining the layout and structure of the
+material.</p>
+		
 	</div>
 	<!-- week1 end -->
 		
