--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -218,6 +218,13 @@ markup language (XML) and extensible hypertext markup language (XHTML).These
 were each created to fulfill particular needs in defining the layout and structure of the
 material.</p>
 		
+		<p><b>HTML5</b><br>Hypertext markup language is used to aid in the publication of web pages by providing
+a structure that defines elements like tables, forms, lists and headings, and identifies where
+different portions of our content begin and end. It can be used to embed other file formats
+like videos, audio files, documents like PDFs and spreadsheets, among others. HTML is
+the most relied upon language in the creation of web sites. In this text we will focus on
+HTML5. While it is technically still in draft form, many proposed elements are already
+supported by the newer versions of most of the popular browsers.</p>
 	</div>
 	<!-- week1 end -->
 		
