--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -225,6 +225,47 @@ like videos, audio files, documents like PDFs and spreadsheets, among others. HT
 the most relied upon language in the creation of web sites. In this text we will focus on
 HTML5. While it is technically still in draft form, many proposed elements are already
 supported by the newer versions of most of the popular browsers.</p>
+		
+		<p><b>HTML5: History</b>In the beginning, back to the first days of the Internet and ARPA, the primary purpose
+of creating a page was to share research and information. HTML tags were only meant to
+provide layout and formatting of a page. As such, early implementations of HTML were
+somewhat limited as there was little demand for features beyond the basics. Headings,
+bullets, tables, and color were about all developers had to utilize. As sites were created for
+other more commercial uses, developers found creative ways of using these tools to get their
+pages looking more like magazines, advertisements, and what they had drawn on paper.
+Having been one of those developers, I recall the days of just-get-it-looking-right tech-
+niques, splicing page-sized images into tables so graphics were (usually) where we wanted
+them, nesting tables within tables to create complex layouts, and other methods that violate
+today’s best practices.</p>
+		
+		<p><b>HTML5: Current State</b>While not formally finalized, many browsers are already supporting a number of features
+proposed in drafts of HTML5, including things like canvas and media support that greatly
+improve the browser’s ability to process and display complex materials without requiring
+extensive coding and extensions. In the past, sites that used video and audio players had to
+integrate support for many players, and would have to include the libraries and formatted
+files for those systems in their sites. By providing a solution to using these media forms
+within HTML5, we can improve on the user experience and reduce the efforts necessary
+to provide them.</p>
+		<p>While these new features do reduce the amount of programming required to imple-
+ment higher level elements, and include interactive elements that exceed document markup
+activities, HTML5 is still considered a markup language.</p>
+		<p>In these languages, we use tags to ascribe additional meaning to our text, which provide
+instruction to the browser as to how to display the text on the screen, but are not necessarily
+displayed to the user. In HTML and XHTML these tags are fixed, or predefined, meaning
+the names that can be used in the tags are limited to what browsers are able to recognize.
+In XML, tags are defined by the person creating the content as they are typically used in
+conjunction with data sources and provide information.</p>
+		
+		<p><b>HTML5: W3C Standards</b>The World Wide Web Consortium,1 or W3C, is an international community that sup-
+ports web development through the creation of open standards that provide the best user
+experience possible for the widest audience of users. This group of professionals and experts
+come together to determine how CSS and HTML should operate, what tags should be
+included as features, and more. The W3C is also your best reference point in determining
+the accessibility of your site through the use of tools that analyze your code for W3C
+compliance. These tools confirm if you have fully implemented elements in your code, like
+providing alternate text descriptions of images in the event that the image cannot load, or
+the user is visually impaired.</p>
+		
 	</div>
 	<!-- week1 end -->
 		
