--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -226,7 +226,7 @@ the most relied upon language in the creation of web sites. In this text we will
 HTML5. While it is technically still in draft form, many proposed elements are already
 supported by the newer versions of most of the popular browsers.</p>
 		
-		<p><b>HTML5: History</b>In the beginning, back to the first days of the Internet and ARPA, the primary purpose
+		<p><b>HTML5: History </b>In the beginning, back to the first days of the Internet and ARPA, the primary purpose
 of creating a page was to share research and information. HTML tags were only meant to
 provide layout and formatting of a page. As such, early implementations of HTML were
 somewhat limited as there was little demand for features beyond the basics. Headings,
@@ -238,7 +238,7 @@ niques, splicing page-sized images into tables so graphics were (usually) where 
 them, nesting tables within tables to create complex layouts, and other methods that violate
 today’s best practices.</p>
 		
-		<p><b>HTML5: Current State</b>While not formally finalized, many browsers are already supporting a number of features
+		<p><b>HTML5: Current State </b>While not formally finalized, many browsers are already supporting a number of features
 proposed in drafts of HTML5, including things like canvas and media support that greatly
 improve the browser’s ability to process and display complex materials without requiring
 extensive coding and extensions. In the past, sites that used video and audio players had to
@@ -256,7 +256,7 @@ the names that can be used in the tags are limited to what browsers are able to 
 In XML, tags are defined by the person creating the content as they are typically used in
 conjunction with data sources and provide information.</p>
 		
-		<p><b>HTML5: W3C Standards</b>The World Wide Web Consortium,1 or W3C, is an international community that sup-
+		<p><b>HTML5: W3C Standards </b>The World Wide Web Consortium,1 or W3C, is an international community that sup-
 ports web development through the creation of open standards that provide the best user
 experience possible for the widest audience of users. This group of professionals and experts
 come together to determine how CSS and HTML should operate, what tags should be
@@ -266,6 +266,37 @@ compliance. These tools confirm if you have fully implemented elements in your c
 providing alternate text descriptions of images in the event that the image cannot load, or
 the user is visually impaired.</p>
 		
+		<p><b>CSS</b><br>CSS stands for cascading style sheet, and is used to create rules about the color, font, and
+layout of our pages. It also determines when those rules are to be used, based on informa-
+tion like the device connecting to the page, or in response to a user’s action. CSS can be
+used by not only HTML but any XML-based language. By separating as much of the look
+and feel of a page from HTML as possible, we actually separate content from appearance.
+This makes it possible to quickly create several different versions of the appearance of our
+site, without recreating the content in each version. Our best approach is to use HTML to
+define the structure (and only structure) of our pages whenever possible, laying the ground-
+work for CSS to know where to apply the actual style.</p>
+		<p><b>CSS: History</b> As HTML grew in popularity, demands on its feature set also grew. Combined with the
+variety of browser implementations and their varied approaches to rendering and support,
+creating robust, visually appealing sites involved a significant amount of time and effort. To
+reduce these, and separate the duties of presentation from those of content, proposals were
+sought to define a new system of managing these features. CSS was born out of CHSS,
+or Cascading Hypertext Style Script, and extends our capabilities by allowing us to go far
+beyond the styling limits of HTML by giving us more power over images, making pages
+appear more newspaper or magazine-like with layout and typography affects, and reducing
+load time.</p>
+		<p>Introduced for public use in 1996, CSS1 contained the ability to apply rules by iden-
+tifying elements (selectors), and most of the properties still in use today. CSS2 added the
+ability to adapt for different displays and devices, as well as positioning elements by specific
+values on the page. CSS2.1 followed with the introduction of additional features, but these
+were not considered substantial enough to warrant a full version number change.</p>
+		
+		<p><b>CSS: Current State</b> While commonly referred to as CSS3, the numbering no longer applies to the language
+as a whole. The developers have decided to break the language into modules, allowing
+different aspects of the language to be revised and released independent of one another.
+This allows for stable modules to stay numbered as they are (since they are not actually
+changing), while those under more active development can be pushed out as needed. At
+the moment, most of the “current” modules are at version number 3. Some have not really
+changed from 2.1, while work on version 4 of selected modules is already underway.</p>
 	</div>
 	<!-- week1 end -->
 		
